# computer-mcp

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  server.py  test_agent.py  test_output.txt
.github/workflows/: publish.yml  test-linux.yml  test-macos.yml  test-windows.yml  test.yml
computer_mcp/: __init__.py  cli.py  main.py  mcp.py  server.py
computer_mcp/actions/: config.py  keyboard.py  window.py
computer_mcp/core/: platform.py  state.py  utils.py  virtual_desktop.py
computer_mcp/handlers/: config.py  keyboard.py  mouse.py  screenshot.py  window.py
core/: state.py  utils.py
docs/: ACCESSIBILITY_TREE_IMPLEMENTATION_PLAN.md
handlers/: config.py  keyboard.py  mouse.py  screenshot.py
