[project]
name = "computer-mcp"
version = "0.1.0"
description = "Cross-platform MCP server for computer automation and control"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "pynput>=1.7.6",
    "mss>=9.0.1",
    "Pillow>=10.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
macos = ["pyobjc-framework-Quartz>=10.0"]  # Optional, AppleScript fallback available
linux = ["PyGObject>=3.44"]  # Optional, requires: sudo apt install python3-gi gir1.2-atspi-2.0
